# VAI

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt  vercel.json
.grok/rules/: 01-project-context.md  02-personas.md  03-documentation.md  04-betting-games.md  (+1 more)
api/: index.py
deploy/: README.md  fix-nginx-https.sh  install-ubuntu-local.sh  install-ubuntu.sh  nginx-vai-https.conf  nginx-vai.conf  setup-domain.sh  update-server.sh  vai.service
docs/: AIRUP.md  ROSTER.md  SRS.md  TRACE-LOG.md  Träffsannolikhet.md  VISION.md  deploy-hetzner.md
inbox/: 2026-07-15-experts-travet.html  2026-07-15-experts-travet.md  README.md
outbox/: README.md
pending/: README.md
scripts/: save_atg_race_card.py  tryout_arjang_ui.py  tryout_hit_tooltip.py  tryout_live_v85.py  tryout_v1_1.py  verify_betslip_layout.py  verify_betslip_png_match.py  verify_checklist.py  verify_datum.py  verify_deselect.py  verify_deselect_and_frames.py  verify_exact_budget.py  verify_freeze_empty_alert.py  verify_freeze_leg.py  verify_game_title.py  verify_generate_empty.py  verify_generate_partial.py  verify_hari_buttons.py  verify_hastar_labels.py  verify_rationale_default.py  verify_rationale_text.py  verify_seed_help.py  verify_slip_export.py  verify_slip_print_pdf.py  verify_suggested_stake_leg6.py  verify_unfreeze_generate.py  verify_vai_branding.py
src/: README.md
tests/: conftest.py  test_atg_race_card.py  test_cost.py  test_expert_v1.py  test_experts_roster.py  test_hit_summary.py  test_race_card_io.py  test_race_card_json.py  test_random_v1.py  test_schedule.py  test_server.py
(+133 files in other folders)
